Implement internal method invocation
Overly simple, ignores tons of edge cases, but w/e, it's working

--- a/interpreter/todo
+++ b/interpreter/todo
@@ -9,3 +9,8 @@ Binary to organize haxe notes
 LanguageGoBag
   Map#length
   Map#fetch
+
+Binding class
+
+Objects
+  lazily make the maps (e.g. constants can be null until we need to use it)
