--- a/interpreter/todo
+++ b/interpreter/todo
@@ -1,10 +1,13 @@
+Binding class
+
 Interpreter:
-  swap all string states with enums
   move all state into the Interpreter thing
   Interpreter#currentExpression as attr
   create Stack class: (#push(val:T):T, #pop():T, #current:T, length:Int, isEmpty:Bool)
 
-Binding class
+Haxe
+  Check out guards for pattern matching
+  Check empty expression list. It should return nil, pretty sure this returns whatever happens to be the current expression
 
 test showing that I can set a local in toplevel binding, and then access it (ie interpreter is setting up the stack correctly)
 
